// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Typography /> should render and match snapshot for default props 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="md"
/>
`;

exports[`<Typography /> should render and match snapshot for variant animated 1`] = `
<Text
  accessibilityLabel="Texto animado"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="Texto animado"
  variant="animated"
>
  Texto animado
</Text>
`;

exports[`<Typography /> should render and match snapshot for variant lg 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="lg"
/>
`;

exports[`<Typography /> should render and match snapshot for variant max 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="max"
/>
`;

exports[`<Typography /> should render and match snapshot for variant md 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="md"
/>
`;

exports[`<Typography /> should render and match snapshot for variant min 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="min"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xl 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="xl"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xs 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="xs"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xxl 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="xxl"
/>
`;

exports[`<Typography /> should render and match snapshot for variant xxs 1`] = `
<Text
  accessibilityLabel="undefined"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="undefined"
  variant="xxs"
/>
`;

exports[`<Typography /> should render with children 1`] = `
<Text
  accessibilityLabel="Texto de exemplo"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="Texto de exemplo"
  variant="md"
>
  Texto de exemplo
</Text>
`;

exports[`<Typography /> should render with custom id 1`] = `
<Text
  accessibilityLabel="Texto com ID personalizado"
  lineHeightVariant="min"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="custom-id"
  variant="md"
>
  Texto com ID personalizado
</Text>
`;

exports[`<Typography /> should render with custom lineHeightVariant 1`] = `
<Text
  accessibilityLabel="Texto com linha personalizada"
  lineHeightVariant="max"
  style={
    [
      {
        "color": "",
        "fontSize": 16,
        "lineHeight": 0,
      },
    ]
  }
  testID="Texto com linha personalizada"
  variant="md"
>
  Texto com linha personalizada
</Text>
`;
